--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,6 @@
+/* assets/styles/app.css */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 body {
-    background-color: skyblue;
+    background-color: lightgray;
 }
